Try #1 for fixing work on mobile devices

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -237,7 +237,7 @@ th {
 
 label {
   display: inline-block;
-  /*margin-bottom: 0.5rem;*/
+  margin-bottom: 0.5rem;
 }
 
 button {
